REGRESSION(r98542): Rendering error on Google maps https://bugs.webkit.org/show_bug.cgi?id=71996

Source/WebCore:

Reviewed by Andreas Kling.

r98542 exposed that StyleBoxData copy constructor and operator== are missing a field.

Test reduction by David Barr.

Test: fast/css/vertical-align-length-copy-bug.html

* rendering/style/StyleBoxData.cpp:
(WebCore::StyleBoxData::StyleBoxData):
(WebCore::StyleBoxData::operator==):

LayoutTests:

Reviewed by Andreas Kling.

Test reduction by David Barr.

* fast/css/vertical-align-length-copy-bug-expected.txt: Added.
* fast/css/vertical-align-length-copy-bug.html: Added.



Canonical link: https://commits.webkit.org/88635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100078 268f45cc-cd09-0410-ab3c-d52691b4dbfc